# pyglet_gamemaker

./: .flake8  README.md  pyproject.toml  requirements.txt  run_demo.py  run_tests.py
.github/workflows/: publishing.yml
pyglet_gamemaker/: __init__.py  errors.py  scene.py  types.py
pyglet_gamemaker/gui/: __init__.py  button.py  text.py  text_button.py  widget.py
pyglet_gamemaker/sprite/: __init__.py  animation.py  image_grid.py  sprite_sheet.py  texture_grid.py  yaml_validator.py
src/: menu.py  scene.py  sprite.py  types.py  window.py
src/gui/: button.py  text.py  text_button.py  widgets.py
src/shapes/: __init__.py  hitbox.py  rect.py
src/sprite/: __init__.py  sprite_sheet.py
test/: demo.py  gui_button.py  gui_text.py  gui_text_button.py  menu.py  run_tests.py  scene.py  shapes_circle.py  shapes_hitbox.py  shapes_rect.py  sprite.py  sprite_spritesheet.py  test.py  window.py
test/media/: AnimationList Padded.yaml  AnimationList.yaml
