[build-system]
requires = ["hatchling >= 1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "_version.py"

[project]
name = "pyglet-gamemaker"
dynamic = ["version"]
dependencies = [
	"pyglet>=2.1.10"
]
authors = [
	{ name="Steven Robles", email="stevenrrobles13@gmail.com" }
]
description = "pyglet wrapper for making games."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Badnameee/pyglet-gamemaker"
Issues = "https://github.com/Badnameee/pyglet-gamemaker/issues"

[tool.mypy]
python_version = "3.14"
strict = true
exclude = [
	"^test/.*$",
	"^run_tests\\.py$",
	"^run_demo\\.py$",
]

[tool.ruff]
exclude = [
	"**/__init__.py",
	"run_demo.py",
	".venv/*",
]

[tool.ruff.lint]
extend-select = [
	"D",
	"D401",
	"I",
	"T20",
]
extend-ignore = [
	"D206",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
indent-style = "tab"
quote-style = "single"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D", "T20", "F403", "F405"]
"run_tests.py" = ["D", "T20"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]